--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,6 +10,7 @@ $bp-desk: 100em;
 $system-fonts: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
 
 $font-family-primary: $system-fonts;
+$font-family-heading: 'Vollkorn', #{$system-fonts};
 $font-size-primary: 1rem;
 
 // Layout
