--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,8 @@ $font-family-primary: $system-fonts;
 $font-family-heading: 'Vollkorn', #{$system-fonts};
 $font-size-primary: 1rem;
 
+$lh-base: 1.6;
+
 // Layout
 $layout-width: 60rem;
 $content-width: 40rem;
@@ -23,10 +25,15 @@ $spacing-unit: 1rem;
 
 // BP colors TEMP - Early development breakpoint indicator.
 $colors-persephone: (
-  shadow: #c78577,
+  shadow: #6e1930,
   white: #cfd3d4,
-  black: #040404,
-  base: #48788c,
+  dark: #1d1f27,
+  primary: saturate(#48788c, 35%),
   highlight: #cf3664,
-  border: #6ed7c3
+  secondary: darken(#8f5da7, 10%)
 );
+
+$color-group: $colors-persephone;
+
+$color-text: map-get($color-group, dark);
+$color-link: map-get($color-group, secondary);
