--- a/_sass/base/_type.scss
+++ b/_sass/base/_type.scss
@@ -1,9 +1,18 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+@include all-headers {
   font-family: $font-family-heading;
   font-weight: 600;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  transition: 0.25s color;
+
+  @include haf {
+    color: $color-link;
+  }
+
+  @include all-text (true) {
+    border-bottom: 2px solid $color-link;
+  }
 }
