Nav update; playing with colors

--- a/_sass/base/_type.scss
+++ b/_sass/base/_type.scss
@@ -10,6 +10,10 @@ a {
 
   @include haf {
     color: $color-link;
+
+    nav & {
+      border-bottom: 2px solid currentColor;
+    }
   }
 
   @include all-text (true) {
