--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -12,6 +12,7 @@ $system-fonts: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxyge
 $font-family-primary: $system-fonts;
 $font-family-heading: 'Vollkorn', #{$system-fonts};
 $font-size-primary: 1rem;
+$font-size-small: 0.875rem;
 
 $lh-base: 1.6;
 
@@ -19,21 +20,26 @@ $lh-base: 1.6;
 $layout-width: 60rem;
 $content-width: 40rem;
 $spacing-unit: 1rem;
+$spacing-half: $spacing-unit / 2;
 
 // Colors
 // ******
 
-// BP colors TEMP - Early development breakpoint indicator.
+// If you're reading this, read Wicked and Divine, pronto.
+// Colors generated with https://www.canva.com/color-palette and the first
+// Persephone issue cover, then adjusted a bit.
 $colors-persephone: (
-  shadow: #6e1930,
-  white: #cfd3d4,
-  dark: #1d1f27,
   primary: saturate(#48788c, 35%),
+  secondary: darken(#8f5da7, 10%),
   highlight: #cf3664,
-  secondary: darken(#8f5da7, 10%)
+  shadow: #6e1930,
+);
+$colors-grey: (
+  white: #cfd3d4,
+  dark: #1d1f27
 );
 
 $colors: $colors-persephone;
 
-$color-text: map-get($colors, dark);
+$color-text: map-get($colors-grey, dark);
 $color-link: map-get($colors, secondary);
