--- a/_includes/headers/header.html
+++ b/_includes/headers/header.html
@@ -1,8 +1,10 @@
 <header class="l-container c-header">
   <!-- include components/svg-logo.html -->
-  <h1>
-    <a href="/">{{ site.meta.title }}</a>
-  </h1>
+  {% if page.url == '/' %}
+    <h1>{{ site.meta.title }}</h1>
+  {% else %}
+    <h2><a href="/">{{ site.meta.title }}</a></h2>
+  {% endif %}
   <nav class="c-nav">
     <ul class="c-nav__list">
       {% for item in site.data.nav.docs %}
