Line height adjustment; nav tweaks

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -14,7 +14,8 @@ $font-family-heading: 'Vollkorn', #{$system-fonts};
 $font-size-primary: 1rem;
 $font-size-small: 0.875rem;
 
-$lh-base: 1.6;
+$lh-base: 1.8;
+$lh-small: 1.4;
 
 // Layout
 $layout-width: 60rem;
