--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -23,4 +23,10 @@
     color: inherit;
     border-color: currentColor;
   }
+
+  svg {
+    max-width: $font-size-primary * 1.5;
+    max-height: $font-size-primary * 1.5;
+    fill: currentColor;
+  }
 }
