Positions article images

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -26,8 +26,5 @@ body {
 }
 
 img {
-  width: auto; // TEMP
-  max-width: 37.5rem; // TEMP
-  height: auto; // TEMP
-  max-height: 21rem; // TEMP
+  max-width: 100%;
 }
