--- a/_layouts/link-post.html
+++ b/_layouts/link-post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<article>
+<article class="c-article">
   <header>
     {% if page.audio %}
       {% include components/page-audio.html %}
