--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<section>
+<section class="c-article">
   <header>
     {% if page.audio %}
     {% include components/page-audio.html %}
