--- a/css/style.scss
+++ b/css/style.scss
@@ -32,6 +32,7 @@
 
 // Components
 // ***********
+@import "components/article";
 @import "components/footer";
 @import "components/header";
 @import "components/logo"; // TEMP
