Teaser layout; icon nav layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
     {% endif %}
   </p>
   <nav class="c-nav">
-    <ul class="c-nav__list">
+    <ul class="c-nav__list c-nav__list--icons">
       {% include icons.html %}
     </ul>
   </nav>
