--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -33,8 +33,8 @@
   }
 
   svg {
-    max-width: $font-size-primary * 1.5;
-    max-height: $font-size-primary * 1.5;
+    width: $font-size-primary * 1.5;
+    height: $font-size-primary * 1.5;
     fill: currentColor;
   }
 }
