--- a/_sass/utilities/_mixins.scss
+++ b/_sass/utilities/_mixins.scss
@@ -18,9 +18,9 @@
   @include all-headers($asParent) { @content; }
 
   @if $asParent == true {
-    p & { @content; }
+    p &, li &, blockquote & { @content; }
   } @else {
-    p { @content; }
+    p, li, blockquote { @content; }
   }
 }
 
