--- a/_layouts/link-post.html
+++ b/_layouts/link-post.html
@@ -3,14 +3,14 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <article class="c-article">
-  <header>
+  <header class="c-article__header">
     {% if page.audio %}
       {% include components/page-audio.html %}
     {% endif %}
+    <p>
+      <strong>Link: <a href="{{ page.link }}">{{ page.title }} from {{ page.source }}</a></strong>
+    </p>
   </header>
-  <p>
-    <strong>Link: <a href="{{ page.link }}">{{ page.title }} from {{ page.source }}</a></strong>
-  </p>
   {{ content }}
 </article>
 <!-- Disqus -->
