--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <section class="c-article">
-  <header>
+  <header class="c-article__header">
     {% if page.audio %}
     {% include components/page-audio.html %}
     {% endif %}
