--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <article class="c-article">
-  <header>
+  <header class="c-article__header">
     {% if page.audio %}
       {% include components/page-audio.html %}
     {% endif %}
