Comments out unused scripts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,10 @@
   <p class="c-footer__meta">&copy; {{ 'now' | date: "%Y" }} {{ site.meta.title }}</p>
 </footer>
 
-
 <!-- Snap SVG -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script>
+<!-- TODO: Remove or use the Snap script. -->
+<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.5.1/snap.svg-min.js"></script> -->
+
 <!-- Main scripts -->
-<script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
+<!-- TODO: Uncomment once needed again. -->
+<!-- <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script> -->
