Moves features to a component

--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,7 @@
 // Components
 // ***********
 @import "components/article";
+@import "components/features";
 @import "components/footer";
 @import "components/header";
 @import "components/logo"; // TEMP
