--- a/css/style.scss
+++ b/css/style.scss
@@ -37,6 +37,7 @@
 @import "components/features";
 @import "components/footer";
 @import "components/header";
+@import "components/icon";
 @import "components/logo"; // TEMP
 @import "components/nav";
 @import "components/teaser";
